# handler/listOpenings.go
@@ -8,7 +8,16 @@ import (
 )
 
 // @BasePath /api/v1
-func ListOpeningHandler(ctx *gin.Context) {
+
+// @Summary List openings
+// @Description List all openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
+func ListOpeningsHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
 	if err := db.Find(&openings).Error; err != nil {
