# router/routes.go
@@ -19,7 +19,7 @@ func initilizeRoutes(router *gin.Engine) {
 	v1.POST("/opening", handler.CreateOpeningHandler)
 	v1.PUT("/opening", handler.UpdateOpeningHandler)
 	v1.DELETE("/opening", handler.DeleteOpeningHandler)
-	v1.GET("/openings", handler.ListOpeningHandler)
+	v1.GET("/openings", handler.ListOpeningsHandler)
 
 	// initialize swagger
 	router.GET("swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
